# tokenbug

./: MULTI_GPU_README.md  Project.md  README.md  SQL_BUG_DETECTION_README.md  bug_detection.py  bug_detection_line.py  bug_detection_line2.py  bug_detection_results.csv  create_hf_dataset.py  create_hf_dataset_optimized.py  create_sql_dataset.py  evaluate_model.py  evaluate_sql_model.py  generate_buggy_sql.py  launch_multigpu_training.sh  main.py  process_pytracebugs.py  process_sql_bugs.py  pyproject.toml  run_full_pipeline.slurm  run_sql_pipeline.slurm  sql_utils.py  test_bug_detection.py  train_distilroberta_embedding.py  train_distilroberta_full.py  train_embedding_model.py  train_embedding_model_multigpu.py  train_sql_model.py  train_with_contrastive.py  training_utils.py
